--- a/API/.env
+++ b/API/.env
@@ -28,3 +28,7 @@ APP_SECRET=79a4135b83adb07161120a6520318b1f
 DATABASE_URL="mysql://root:root@127.0.0.1:3306/market?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
