--- a/API/config/packages/nelmio_cors.yaml
+++ b/API/config/packages/nelmio_cors.yaml
@@ -1,10 +1,13 @@
 nelmio_cors:
     defaults:
-        origin_regex: true
-        allow_origin: ['%env(CORS_ALLOW_ORIGIN)%']
-        allow_methods: ['GET', 'OPTIONS', 'POST', 'PUT', 'PATCH', 'DELETE']
+        allow_origin: ['http://localhost:3000']  # L'origine de votre client React
+        allow_methods: ['GET', 'POST', 'PUT', 'DELETE', 'OPTIONS']
         allow_headers: ['Content-Type', 'Authorization']
         expose_headers: ['Link']
         max_age: 3600
     paths:
-        '^/': null
+        '^/':  # Applique CORS à toutes les routes
+            allow_origin: ['http://localhost:3000']  # L'origine de votre client React
+            allow_methods: ['GET', 'POST', 'PUT', 'DELETE', 'OPTIONS']
+            allow_headers: ['Content-Type', 'Authorization']
+            max_age: 3600
